@@ -1,6 +1,5 @@
-<html><body>When loading a file, jEdit remembers if it had a trailing
-line separator character. While this line separator is never shown in the text
-area, it is written back to the file when the buffer is saved.<p>
-
-The trailing line separator can be removed in the
+<html><body>By default, jEdit strips the final end of line character when
+loading a buffer, and re-adds it when saving.
+You can specify that the final end of line be always visible in the
+<b>Loading and Saving</b> pane of the
 <b>Utilities</b>&gt;<b>Buffer Options</b> dialog box.</body></html>
